@@ -2,6 +2,7 @@ package enhanced.search.service;
 
 import enhanced.search.dto.*;
 import enhanced.search.utils.GroupTypes;
+import kotlin.text.Regex;
 import org.gitlab4j.api.GitLabApi;
 import org.gitlab4j.api.GitLabApiException;
 import org.glassfish.jersey.internal.guava.Predicates;
@@ -16,8 +17,8 @@ public class GitlabGetService {
     private final GitLabApi gitLabApi;
     private final GroupTypes gt = new GroupTypes();
 
-    public GitlabGetService() {
-        this(new GitLabApi("http://localhost", "ETdrQeZweNu3yRgtDzxr"));
+    public GitlabGetService() throws GitLabApiException {
+        this(new GitLabApi("http://localhost", "rsQKVaBP1-RvtYGD4eTW"));
     }
 
     public GitlabGetService(final GitLabApi gitLabApi) {
@@ -81,7 +82,29 @@ public class GitlabGetService {
         return projects;
     }
 
-    public List<Branch> getBranches(final SearchRequest request) {
-        return List.of();
+
+
+    public List<Branch> getBranches(final SearchRequest request) throws GitLabApiException {
+        Long projectId = request.getProjectId();
+        if (projectId != null) {
+            return gitLabApi
+                    .getRepositoryApi()
+                    .getBranchesStream(projectId)
+                    .map(b -> new Branch(0, b.getName()))
+                    .toList();
+        } else {
+            return Collections.emptyList();
+        }
+    }
+
+    public List<Branch> getBranches(final SearchRequest request, Regex regex) throws GitLabApiException {
+        List<Branch> branches = getBranches(request);
+        if (regex != null) {
+            branches = branches
+                    .stream()
+                    .filter(Predicates.compose(regex::matches, Branch::getName))
+                    .toList();
+        }
+        return branches;
     }
 }
